<resources>
    <string name="app_name">Anadolu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="gas_button_name">Gas</string>
    <string name="water_button_name">Water</string>
    <string name="humidity_button_name">Humidity</string>
    <string name="fire_button_name">Fire</string>
    <string name="electricity_button_name">Electricity</string>
    <string name="voltage_button_name">Voltage</string>
    <string name="pipe_button_name">Pipes</string>

    <string name="pipe_name_information">Sensor name: %1$d</string>
    <string name="pipe_danger_information">Danger level: %1$d</string>
    <string name="graph_now">now</string>
    <string name="graph_one_hour_ago">one hour ago</string>
    <string name="graph_one_day_ago">one day ago</string>
    <string name="graph_one_week_ago">one week ago</string>
    <string name="graph_one_month_ago">one month ago</string>
    <string name="nothing_found">Oops. Nothing found</string>
    <string name="possible_congestion">Possible congestion at this pipe is detected at %1$s.</string>
    <string name="good_health">No problem is detected at this pipe.</string>

    <string-array name="spinner_array">
        <item>Last one hour</item>
        <item>Last one day</item>
        <item>Last one week</item>
        <item>Last one month</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
